--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
+# OS / editor
 .DS_Store
+.vscode/
+# Python
 __pycache__/
 *.pyc
 .ipynb_checkpoints/
-.venv/
+# Data (keep small samples only)
 data/raw/
 data/interim/
+# Envs (never commit)
+.venv/
+ENV/
+# Conda
+*.conda
+*.lock
